# dev-academy

./: .gitignore  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/api/: .env  Cargo.toml  docker-compose.yml  env.example
apps/api/setup/: init.sql
apps/api/src/: config.rs  error.rs  main.rs
apps/api/src/dtos/: auth.rs  events.rs  lessons.rs  mod.rs  modules.rs  programe.rs  search.rs
apps/api/src/handlers/: auth.rs  lessons.rs  mod.rs  modules.rs  programes.rs  search.rs
apps/api/src/middleware/: auth_middleware.rs
apps/api/src/models/: auth.rs  mod.rs  programe.rs  programme_metadata.rs  search.rs
apps/api/src/routes/: auth.rs  lessons.rs  mod.rs  modules.rs  programes.rs  search.rs
apps/api/src/seed/: main.rs  seed_bucket.rs  seed_database.rs
apps/api/src/seed/data/: course.rs
apps/api/src/service/: jwt_service.rs  kafka_service.rs  mod.rs  neo4j_query.rs  neo4j_service.rs  opensearch.rs  postgres_query.rs  postgres_service.rs  redis_cache_service.rs  s3_service.rs
apps/api/src/traits/: from_node.rs  mod.rs  pg_model_trait.rs  redis_trait.rs
apps/src/: App.tsx
apps/src/components/: Contact.tsx  CourseViewer.tsx  Documents.tsx  Footer.tsx  Hero.tsx  Inscription.tsx  Navigation.tsx  Programmes.tsx  course.tsx  docs.tsx
apps/src/components/ui/: alert-dialog.tsx  carousel.tsx  checkbox.tsx  sidebar.tsx
apps/src/hooks/: useAuth.tsx
apps/src/pages/WebContainer/: CodeEditor.tsx  FileExplorer.tsx  IDE.tsx  LanguageRunners.ts  LanguageSelector.tsx  Terminal.tsx  webContainer.tsx  webContainer.type.ts
apps/src/pages/auth/: Connexion.tsx
apps/src/pages/company/: About.tsx  Blog.tsx  Carrers.tsx  Partners.tsx  Team.tsx
apps/src/pages/home/: home.tsx
apps/src/pages/support/: FAQ.tsx  Privacy.tsx  Terms.tsx
apps/src/providers/: authProvider.tsx
