[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]

neo4rs = "0.8.0"
postgres = "0.19.12"
rdkafka = "0.38.0"
redis = "0.32.7"
opensearch = "1.0.0"
opentelemetry = "0.31.0"
actix-web = "4.12.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
serde = {version="1.0.228", features = ["derive"]} 
