[package]
name = "api"
version = "0.1.0"
edition = "2024"
default-run = "api"

[lib]
name = "api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/seed/main.rs"

[dependencies]
neo4rs = "0.8.0"
postgres = "0.19.12"
rdkafka = "0.38.0"
opensearch = "2.3.0"
actix-web = "4.12.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
dotenv = "0.15.0"
serde_json = "1.0.145"
futures = "0.3.31"
async-trait = "0.1.89"
aws-sdk-s3 = "1.112.0"
aws-config = "1.8.10"
ring = "0.17.14"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
base64 = "0.22.1"
subtle = "2.6.1"
hex = "0.4.3"
jsonwebtoken = {version = "10.2.0", features = ["aws_lc_rs"]}
redis = {version = "0.32.7", features = ["aio", "tokio-comp"]}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
serde = {version="1.0.228", features = ["derive"]}
